# Personal-Finance-App

./: .gitignore  README.md
server/: alembic.ini  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 0f383a1dfd92_create_uploaded_files_table.py  30bc480cddc2_add_category_rules_and_transactions.py  8537a82ebf86_2026_02_07_initial_migration.py  9c54e7b1a2f3_normalize_categories_schema.py  a2f4c1d9b101_seed_category_rules_non_overlapping_examples.py  e1b6f9a4c8d2_seed_categories.py
server/scripts/: etl_categoriser_demo.py  scan_merchants.py
server/src/: database.py  main.py
server/src/api/: router.py
server/src/auth/: authentication.py  models.py  password.py  router.py  schemas.py
server/src/core/: config.py
server/src/csv/: models.py  router.py  schemas.py
server/src/db/: __init__.py  session.py
server/src/domains/auth/: authentication.py  dependencies.py  models.py  password.py  router.py  schemas.py
server/src/domains/categories/: dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py
server/src/domains/csv/: models.py  router.py  schemas.py
server/src/domains/etl/: data_classes.py  dependencies.py  models.py  router.py  schemas.py  service.py
server/src/domains/etl/parsers/: categoriser.py  pkobp_csv.py
server/src/domains/processing/: dependencies.py  router.py  schemas.py  service.py
server/src/domains/processing/parsers/: categoriser.py  pkobp_csv.py
server/src/domains/rules/: dependencies.py  models.py  router.py  schemas.py  service.py
server/src/domains/transactions/: dependencies.py  models.py  router.py  schemas.py  service.py
server/src/process_files/: application_service.py  data_classes.py  dependencies.py  router.py
server/tests/: conftest.py
server/tests/integration/domains/categories/: test_categories_router.py
server/tests/integration/domains/csv/: test_csv_router.py
